<resources>
    <string name="app_name">TodoPriority</string>
    <string name="nav_header_title">To do priority</string>
    <string name="nav_header_subtitle">Team 13</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_todo">To do</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_matrix">Matrix</string>
    <string name="menu_analyze">Analyze</string>
    <string name="menu_settings">Settings</string>
    <string name="select_all">All</string>
    <string name="select_sort_priority">Priority</string>
    <string name="select_sort_importance">Importance</string>
    <string name="select_sort_deadline">Deadline</string>
    <string name="select_project_daily">Daily</string>
    <string name="add_title">Title</string>
    <string name="add_importance">Importance</string>
    <string name="add_deadline_date">Deadline (date)</string>
    <string name="add_estimated_time">Estimated time (Default: Over 24h)</string>
    <string name="add_memo">Memo</string>
    <string name="add_star">Importance</string>
    <string name="add_description_deadline_date">Select deadline date.</string>
    <string name="add_deadline_time">Deadline (time)</string>
    <string name="add_description_deadline_time">Select deadline time.</string>
    <string name="add_description_estimated_time">Select estimated time.</string>
    <string name="add_error_estimated_time">We don\'t support over than 24 hours.</string>
    <string name="add_error_deadline_time">Check your time again.</string>
    <string name="add_error_hour">Hours can\'t be 24 or more.</string>
    <string name="add_error_minute">Minutes can\'t be 60 or more.</string>
    <string name="add_error_number">Only number can be entered here.</string>
    <string name="add_error_deadline_date">Input like year-month-day(yyyy-MM-dd)</string>
    <string name="add_menu_done">Done</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_done">Add</string>
    <string name="add_error_blank">*Can\'t be blank.</string>
    <string name="add_title_project">Add Project</string>
    <string name="add_title_task">Add Task</string>
    <string name="setting_add_auto">Auto</string>
    <string name="setting_add_manual">Manual</string>
    <string name="add_required">*Required</string>
    <string name="add_error_deadline_date_not_valid">Can\'t select the day before today.</string>
    <string name="add_select_project">Project</string>
    <string name="add_select_project_init">Select Project</string>
    <string name="add_select_project_new">Add New Project</string>
    <string name="card_expand">Expand card more or less</string>
    <string name="card_title">Title</string>
    <string name="card_date_hint" translatable="false">2020/05/15 AM 03:31</string>
    <string name="card_msg">Start now!</string>
    <string name="card_importance_text">Importance:</string>
    <string name="card_urgency_text">Urgency:</string>
    <string name="card_score_hint" translatable="false">100/100</string>
    <string name="card_deadline">Deadline:</string>
    <string name="card_estimated_time">Estimated time:</string>
    <string name="card_minimum_start_time">Minimum Start time:</string>
    <string name="card_time_hint" translatable="false">04:21</string>
    <string name="card_memo">Memo:</string>
    <string name="card_complete">Complete</string>
    <string name="card_edit">Edit</string>
    <string name="card_delete">Delete</string>
    <string name="card_project">Project:</string>
    <string name="message_start_important_1">It must be completed immediately.</string>
    <string name="message_start_important_2">I recommend completing it quickly.</string>
    <string name="message_start_important_3">I recommend starting now to complete.</string>
    <string name="message_start_important_4">Let\'s do it gradually.</string>
    <string name="message_start_not_important_2">If you have someone to ask, delegate it.</string>
    <string name="message_start_not_important_3">Do something else first.</string>
    <string name="message_start_not_important_4">Cancel or Postpone it.</string>
    <string name="message_start_not_important_1">Get it done somehow quickly.</string>
    <string name="action_add">ADD</string>
    <string name="action_add_project">Add project</string>
    <string name="action_add_task">Add task</string>
    <string name="card_add_task">Add task</string>
    <string name="card_analyze">Analyze</string>
    <string name="card_time_over">Over 24h</string>
    <string name="add_update">Update</string>
    <string name="add_title_project_update">Update Project</string>
    <string name="add_title_task_update">Update task</string>
    <string name="main_error_project_add">Failed to add project.</string>
    <string name="main_error_project_update">Failed to update project.</string>
    <string name="main_error_task_add">Failed to add task.</string>
    <string name="main_error_task_update">Failed to update task.</string>
    <string name="analyze_task_in_progress">Currently in progress tasks</string>
    <string name="analyze_task_last">Previous tasks</string>
    <string name="card_number_hint" translatable="false">00</string>
    <string name="card_in_progress">In progress</string>
    <string name="card_fail">Fail</string>
    <string name="analyze_fail">Fail</string>
    <string name="analyze_complete">Complete (Done)</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_msg">After deletion, it cannot be recovered.</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="analyze_project_in_progress">Currently in progress projects</string>
    <string name="analyze_project_last">Previous projects</string>
    <string name="select_all_projects">All projects</string>
    <string name="analyze_previous_project">(previous)</string>
    <string name="dialog_color_title">Pick color</string>
    <string name="dialog_select">Select</string>
    <string name="setting_github">Github</string>
    <string name="setting_github_description">Go to Github website.</string>
    <string name="setting_night_mode_manual">Control night mode manually</string>
    <string name="setting_night_mode_on">Night mode is turned on.</string>
    <string name="setting_night_mode_off">Night mode is turned off.</string>
    <string name="setting_night_mode_description">Use own night mode setting.</string>
    <string name="setting_night_mode_night">Night</string>
    <string name="setting_night_mode_day">Day</string>
    <string name="setting_night_mode">Night mode</string>
    <string name="setting_info">Information</string>
    <string name="setting_plato">PLATO (classroom)</string>
    <string name="setting_plato_description">Go to PLATO website.</string>
    <string name="setting_bug_report">Bug report</string>
    <string name="setting_bug_report_send">Send</string>
    <string name="setting_bug_report_description">Send bug report to developer.</string>
    <string name="setting_bug_report_fail">Failed to send bug report.</string>
    <string name="setting_sync_center">Synchronization center</string>
    <string name="setting_sync_center_description">Visit synchronization center.</string>
    <string name="sync_id">ID</string>
    <string name="sync_pw">Password</string>
    <string name="sync_register">Register</string>
    <string name="sync_login">Log in</string>
    <string name="sync_welcome">Welcome to synchronization center.</string>
    <string name="sync_upload">Upload data</string>
    <string name="sync_download">Download Data</string>
    <string name="sync_error_length16">Can\'t be longer than 16 characters.</string>
    <string name="sync_disconnection">Server disconnected</string>
    <string name="sync_disconnection_description">Now server is disconnected. You can\'t visit synchronization center.</string>
    <string name="dialog_ok">OK</string>
    <string name="sync_error_login">Login error</string>
    <string name="sync_error_id">No such id. Please register.</string>
    <string name="sync_error_pw">The id or password don\'t match.</string>
    <string name="sync_error_server_internal">An internal server error has occurred. so the request cannot be processed.</string>
    <string name="sync_register_complete">Register processing completed well.</string>
    <string name="sync_welcome_message">" hello!"</string>
    <string name="sync_error_length5">Can\'t be shorter than 5 characters.</string>
    <string name="sync_error_id_duplicate">Already used ID. Use another id.</string>
    <string name="sync_error_register">Register error</string>
    <string name="sync_error_upload">Upload error</string>
    <string name="sync_error_download">Download error</string>
    <string name="sync_error_load">An error occurred during database update. Try again.</string>
    <string name="sync_uploading">Data upload start.</string>
    <string name="sync_download_complete">Data Download Complete.</string>
    <string name="setting_auto_sync">Auto synchronization</string>
    <string name="setting_auto_sync_on">Auto synchronization is working.</string>
    <string name="setting_auto_sync_off">Auto synchronization is not working.</string>
    <string name="sync_upload_message">Do you want upload data to server? Data previously saved in server will be deleted.</string>
    <string name="sync_download_message">Do you want download data from server? Data previously saved in this device will be deleted.</string>
    <string name="setting_sync">Synchronization</string>
    <string name="sync_upload_complete_project">Project upload complete.</string>
    <string name="sync_upload_complete_task">Task upload complete.</string>
    <string name="sync_logout">Log out</string>

</resources>
