<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/setting_sync">
        <Preference
            app:icon="@drawable/ic_setting_sync_center"
            app:key="sync"
            app:summary="@string/setting_sync_center_description"
            app:title="@string/setting_sync_center">
            <intent
                android:targetClass="android.swlab2020.todopriority.SyncActivity"
                android:targetPackage="android.swlab2020.todopriority" />
        </Preference>
        <SwitchPreference
            app:dependency="sync"
            app:icon="@drawable/ic_setting_sync"
            app:key="auto_sync"
            app:summaryOff="@string/setting_auto_sync_off"
            app:summaryOn="@string/setting_auto_sync_on"
            app:title="@string/setting_auto_sync" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/setting_night_mode">
        <CheckBoxPreference
            app:icon="@drawable/ic_setting_night_mode"
            app:key="nightModeManual"
            app:summary="@string/setting_night_mode_description"
            app:title="@string/setting_night_mode_manual" />
        <SwitchPreference
            app:dependency="nightModeManual"
            app:key="nightMode"
            app:summaryOff="@string/setting_night_mode_off"
            app:summaryOn="@string/setting_night_mode_on"
            app:title="@string/setting_night_mode_day" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/setting_info">
        <Preference
            app:icon="@drawable/ic_setting_web"
            app:key="github"
            app:summary="@string/setting_github_description"
            app:title="@string/setting_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/LeeSeungYun1020/TodoPriority_Android_application" />
        </Preference>
        <Preference
            app:icon="@drawable/ic_setting_web"
            app:key="plato"
            app:summary="@string/setting_plato_description"
            app:title="@string/setting_plato">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plato.pusan.ac.kr/course/view.php?id=87267" />
        </Preference>
        <EditTextPreference
            android:saveEnabled="false"
            android:summary="@string/setting_bug_report_description"
            app:icon="@drawable/ic_setting_bug_report"
            app:key="bugReport"
            app:positiveButtonText="@string/setting_bug_report_send"
            app:title="@string/setting_bug_report" />
    </PreferenceCategory>


</PreferenceScreen>
