<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_todo"
            android:title="@string/menu_todo" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_project"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_matrix"
            android:icon="@drawable/ic_menu_matrix"
            android:title="@string/menu_matrix" />

        <item
            android:id="@+id/nav_analyze"
            android:icon="@drawable/ic_menu_analyze"
            android:title="@string/menu_analyze" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
