<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="android.swlab2020.todopriority.ui.HomeFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_home">

        <!--        <action-->
        <!--            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"-->
        <!--            app:destination="@id/nav_home_second" />-->
    </fragment>
    <!--    <fragment-->
    <!--        android:id="@+id/nav_home_second"-->
    <!--        android:name="android.swlab2020.todopriority.ui.home.HomeSecondFragment"-->
    <!--        android:label="@string/home_second"-->
    <!--        tools:layout="@layout/fragment_home_second">-->
    <!--        <action-->
    <!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
    <!--            app:destination="@id/nav_home" />-->

    <!--        <argument-->
    <!--            android:name="myArg"-->
    <!--            app:argType="string" />-->
    <!--    </fragment>-->

    <fragment
        android:id="@+id/nav_project"
        android:name="android.swlab2020.todopriority.ui.ProjectsFragment"
        android:label="@string/menu_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_matrix"
        android:name="android.swlab2020.todopriority.ui.MatrixFragment"
        android:label="@string/menu_matrix"
        tools:layout="@layout/fragment_matrix" />

    <fragment
        android:id="@+id/nav_analyze"
        android:name="android.swlab2020.todopriority.ui.AnalyzeFragment"
        android:label="@string/menu_analyze"
        tools:layout="@layout/fragment_analyze" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="android.swlab2020.todopriority.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>